<resources>
    <string name="app_name">Call Cab Driver</string>
    <string name="api_key">AIzaSyBBHiPBzaKIdhByQszaX4VdbtngMjoDFZ8</string>
    <string name="GOOGLE_BROWSER_API_KEY">AIzaSyCOulawmBROcp77cDGNUCRIUS5F7C6KHys</string>
    <array name="member_list">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </array>

    <string name="forget_password"><u>Forget Password</u></string>
    <string name="term"><u>Terms &amp; Condition</u></string>
    <string name="language">Language</string>
    <string name="choose_language">Choose Language</string>
    <string name="chats">Chats</string>
    <string name="type_your_message">Type your message</string>
    <string name="home">Home</string>
    <string name="my_ride">My Ride</string>
    <string name="messages">Messages</string>
    <string name="wallet">Wallet</string>
    <string name="profile">Profile</string>
    <string name="driver_information">Driver information</string>
    <string name="driving_license_number">Driving License number</string>
    <string name="enter_here">Enter here</string>
    <string name="driver_car">Driver Car</string>
    <string name="car_make">Car Make</string>
    <string name="car_model">Car Model</string>
    <string name="driver_car_number">Driver Car number</string>
    <string name="tap_to_upload_license_image">Tap to Upload License Image</string>
    <string name="tap_to_upload_car_insurance">Tap to Upload Car Insurance</string>
    <string name="save_driver_information">Save Driver Information</string>
    <string name="account">Account</string>
    <string name="username">UserName</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="save_information">Save Information</string>
    <string name="sign_in">Sign In</string>
    <string name="hi_welcome_back_you_ve_been_nmissed">Hi! Welcome back, you\'ve been\nmissed</string>
    <string name="or_sign_in_with">or Sign in with</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_with_space">Sign Up</string>
    <string name="notification">Notification</string>
    <string name="create_account">Create Account</string>
    <string name="fill_your_information_below_or_register_nwith_your_social_account">Fill your information below or register\nwith your social account,</string>
    <string name="name">Name</string>
    <string name="agree_with">Agree with</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in_with_space">Sign In</string>
    <string name="your_destination">Your Destination</string>
    <string name="drop_off_location">Drop-off Location</string>
    <string name="pick_up_location">Pick-up Location</string>
    <string name="your_location">Your location</string>
    <string name="destination_location">Destination location</string>
    <string name="reached">Reached</string>
    <string name="search">Search</string>
    <string name="your_profile">Your Profile</string>
    <string name="ride_accept">Ride Accept</string>
    <string name="complete_ride">Complete Ride</string>
    <string name="delete_account">Delete Account</string>
    <string name="balance">Balance</string>
    <string name="withdraw">Withdraw</string>
</resources>