<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".ui.activity.LoginActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_15sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="@font/montserrat_semi_bold"
                android:gravity="center"
                android:text="@string/sign_in"
                android:textColor="@color/black"
                android:textSize="@dimen/_17sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_20sdp"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center"
                android:text="@string/hi_welcome_back_you_ve_been_nmissed"
                android:textColor="@color/gray_color"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_5sdp"
                android:fontFamily="@font/montserrat_semi_bold"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sdp" />

            <EditText
                android:id="@+id/email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/rounded_with_gray_border"
                android:fontFamily="@font/montserrat_medium"
                android:hint="example@gmail.com"
                android:imeOptions="actionNext"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_12sdp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_color"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_5sdp"
                android:fontFamily="@font/montserrat_semi_bold"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sdp" />

            <EditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/rounded_with_gray_border"
                android:fontFamily="@font/montserrat_medium"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_12sdp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_color"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="@dimen/_15sdp"
                android:fontFamily="@font/montserrat_semi_bold"
                android:text="@string/forget_password"
                android:textColor="@color/gradient_1"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/signInTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20sdp"
                android:background="@drawable/gradient_button"
                android:fontFamily="@font/montserrat_semi_bold"
                android:gravity="center"
                android:paddingVertical="@dimen/_9sdp"
                android:text="@string/sign_in"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:gravity="center"
                android:paddingVertical="@dimen/_5sdp">

                <View
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_1sdp"
                    android:alpha=".5"
                    android:background="@color/gray_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/or_sign_in_with"
                    android:textColor="@color/gray_color"
                    android:textSize="@dimen/_10sdp" />

                <View
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_1sdp"
                    android:alpha=".5"
                    android:background="@color/gray_color" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20sdp"
                android:gravity="center"
                android:paddingVertical="@dimen/_5sdp">

                <ImageView
                    android:id="@+id/facebook_btn"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:visibility="gone"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:src="@drawable/iv_facebook" />

                <ImageView
                    android:id="@+id/google_btn"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:src="@drawable/iv_google_login" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/gray_color"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    android:id="@+id/signUpTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:text="@string/sign_up_with_space"
                    android:textColor="@color/gradient_1"
                    android:textSize="@dimen/_10sdp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>